# consenpico-bench

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.github/workflows/: core-rust.yml
app/: Cargo.toml
app/src/: main.rs
lib/: Cargo.toml
lib/src/: input.rs  lib.rs
prover/: Cargo.toml  Makefile
prover/src/: main.rs
prover/src/cli/: operation.rs
prover/subscripts/: download_ef_data.sh  parse_log_to_table.sh
