[package]
name = "ream-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ethereum_ssz = { workspace = true }
serde = { workspace = true }
snap = "1.1.1"
tracing = { workspace = true }

# ReamBeaconState
alloy-primitives = { version = "1.1", features = ['serde'] }
anyhow = "1.0"
ethereum_ssz_derive = "0.9"
ssz_types = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
