[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-sdk = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
hex = "0.4.3"
app = { path = "../app" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree_hash = { workspace = true }

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { path = "../lib" }
